# VAI

./: .exampleenv  .gitignore  .replit  LICENSE  README.md  app.py  app_idea.py  backup.py  dependencies.json  git_to_txt.py  gpt4prompt.txt  history.json  llm_chains.py  llm_config.json  main.py  new.py  program.py  prompt_templates.json  prompt_templates.py  py_to_txt.py  pyproject.toml  requirements.txt  template_manager.py
code/: front.py  home.html  test.py
templates/: index.html
utils/: chat_utils.py  config.py  llm_chains.py  llm_config.json  result_saving.py  template_manager.py
